# PygameDebug

./: README.md  pyproject.toml
src/: downloadFont.py  windowCreation.py
src/pygamedebugscreen/: __init__.py  windowCreation.py
tests/: __init__.py
